# or_lab

./: README.md  or_lab.Dockerfile
open_manipulator/DynamixelSDK/c++/example/protocol1.0/multi_port/: multi_port.cpp
open_manipulator/DynamixelSDK/c/example/protocol1.0/multi_port/: multi_port.c
open_manipulator/DynamixelSDK/java/protocol1.0/multi_port/: MultiPort.java
open_manipulator/DynamixelSDK/ros/dynamixel_sdk_examples/src/: read_write_node.py
open_manipulator/open_manipulator/open_manipulator_bringup/config/open_manipulator_x/: hardware_controller_manager.yaml  initial_positions.yaml
open_manipulator/open_manipulator/open_manipulator_bringup/launch/: open_manipulator_x.launch.py  open_manipulator_x_gazebo.launch.py
open_manipulator/open_manipulator/open_manipulator_bringup/open_manipulator_bringup/: joint_trajectory_executor.py
open_manipulator/open_manipulator/open_manipulator_description/ros2_control/: open_manipulator_x_position.ros2_control.xacro
open_manipulator/open_manipulator/open_manipulator_moveit_config/config/open_manipulator_x/: moveit_controllers.yaml
open_manipulator/open_manipulator/open_manipulator_teleop/open_manipulator_teleop/: open_manipulator_x_teleop.py
open_manipulator_lab/: CMakeLists.txt  package.xml
open_manipulator_lab/scripts/: lv_priprema.py  orlab_lv.py
