<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_lab</name>
  <version>0.0.0</version>
  <description>The open_manipulator_lab package, ported to ROS 2.</description>
  
  <maintainer email="bmaric@todo.todo">bmaric</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclcpp</depend>           <!-- Replaces roscpp -->
  <depend>rclpy</depend>            <!-- Replaces rospy -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>libboost-system-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Add an ament_python export if the package contains Python modules -->
    <!-- <build_type>ament_python</build_type> -->
  </export>
</package>